--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,6 +7,8 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
+    "types": ["react", "react-dom"],   // <-- add this
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
