--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "@radix-ui/react-popover": "^1.1.15",
     "@tailwindcss/vite": "^4.1.11",
+    "@types/dompurify": "^3.2.0",
+    "dompurify": "^3.3.0",
     "lucide-react": "^0.540.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
