--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.540.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.6",
     "react-select": "^5.10.2",
     "tailwindcss": "^4.1.11"
   },
