--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "npm run build:client && npm run build:server",
     "build:client": "vite build",
     "build:server": "vite build --ssr src/entry-server.tsx --outDir dist/server",
+    "check-bundle": "node scripts/check-bundle-size.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -28,7 +29,8 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.6",
     "react-select": "^5.10.2",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "web-vitals": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
@@ -45,10 +47,12 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "glob": "^13.0.0",
     "globals": "^16.3.0",
     "jest-axe": "^10.0.0",
     "jsdom": "^27.0.0",
     "msw": "^2.10.5",
+    "rollup-plugin-visualizer": "^6.0.5",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2",
